# jarvis-cd

./: .coveragerc  .gitignore  .gitmodules  AGENTS.md  LICENSE  MANIFEST.in  README.md  dependencies.sh  install.sh  jarvis.py  lcov.info  pr.sh  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test_interceptor.yaml  wfcommons-schema.json
.claude/agents/: code-documenter.md  docker-python-test-expert.md  git-expert.md  jarvis-pipeline-builder.md  python-code-updater.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-containers.yaml  main.yml  release.yml
ai-prompts/: new-pipeline.md  phase-14-update.md  phase1-argparse.md  phase10-pipeline-index.md  phase11-template.md  phase12-pipeline.md  phase13-jarvis-mod  phase14-jarvis-ppl-pkg.md  phase15-containers.md  phase16-installer.md  phase2-hostfile.md  phase2-logging.md  phase3-launch.md  phase4-resource-graph.md  phase5-jarvis-repos.md  phase6-jarvis-env.md  phase8-paths.md  phase9-pipeline-scripts.md
ai-prompts/docker/: phase1.md
builtin/base/: package.py
builtin/beegfs/: package.py
builtin/builtin/gray_scott/: CMakeLists.txt  Dockerfile.build  Dockerfile.deploy  README.md  artifacts.py  build.sh  container.py  default.py  gray_scott.cu  node.py  pkg.py  progress.py
builtin/builtin/gray_scott/config/: adios2.xml
builtin/config/: ares.yaml  deception.yaml  jarvis_config.yaml  pnnl.yaml  polaris.yaml
builtin/daos/: README.md  package.py
builtin/io500/: README.md  package.py
builtin/labios/: README.md  package.py
builtin/labios_driver/: package.py
builtin/lustre/: package.py
builtin/memcached/: README.md  package.py
builtin/nats_server/: package.py
builtin/orangefs/: package.py
builtin/pipelines/: simple_test.yaml  test_grid_search.yaml  test_interceptor.yaml  test_simple.yaml
builtin/redis/: README.md  package.py
builtin/repo/: package.py
builtin/resource_graph/: ares.yaml  aurora.yaml  deception.yaml  delta.yaml  g2-standard-4.yaml  pnnl.yaml  polaris.yaml
builtin/ssh/: package.py
ci/: __init__.py  install_deps.sh  install_jarvis.sh  lint.sh  live_ares_gray_scott_probe.py  release_draft.py  release_request.py  run_tests.sh
ci/cluster/: docker-compose.yml
docker/: build.Dockerfile  deploy.Dockerfile  local.sh
docs/: README.md  argparse.md  artifacts.md  executions.md  getting_started.md  hostfile.md  modules.md  package-deployment.md  package-progress.md  package_dev_guide.md  pipeline_tests.md  pipelines.md  release.md  resource_graph.md  scheduler.md  service-runtimes.md  shell.md
docs/source/: conf.py  index.rst  install.rst
jarvis_cd/: __init__.py  argument_parser.py  basic_env.py  configuration_input.py  deployment.py  echo_node.py  enumerations.py  exception.py  exec_node.py  graph.py  hostfile.py  jarvis_manager.py  launcher.py  mpi_node.py  node.py  parallel_node.py  post_install.py  scp_node.py  sleep_node.py  ssh_node.py  test_tracker.py  yaml_cache.py  yaml_conf.py
jarvis_cd/artifacts/: __init__.py  discovery.py  provider.py  reporter.py  schema.py  store.py
jarvis_cd/basic/: __init__.py  basic_env.py  check_command.py  copy_node.py  detect_os.py  echo_node.py  exception.py  exec_node.py  hostfile.py  jarvis_manager.py  kill_node.py  link_node.py  local_exec_node.py  ls_node.py  mkdir_node.py  node.py  node_exec_node.py  parallel_node.py  pkg.py  repo.py  rm_node.py  sleep_node.py  test_tracker.py  yaml_cache.py  yaml_conf.py
jarvis_cd/bootstrap/: config.py  deps.py  git_args.py  jarvis_setup.py  local.yaml  package.py  remote.yaml  scs_repo.py  scs_repo_setup.py  spack_repo.py  spack_setup.py  spack_wrapper.py  ssh.py  ssh_args.py  ssh_setup.py
jarvis_cd/comm/: default.yaml  issh_node.py  mpi_node.py  scp_node.py  ssh_config.py  ssh_exec_node.py  ssh_node.py  to_openssh_config.py
jarvis_cd/core/: __init__.py  cli.py  config.py  container.py  container_pkg.py  environment.py  execution.py  installer.py  module_manager.py  pipeline.py  pipeline_index.py  pipeline_test.py  pkg.py  repository.py  resource_graph.py  route_pkg.py  scheduler.py
jarvis_cd/fs/: __init__.py  copy_node.py  fs.py  link_node.py  ls_node.py  mkdir_node.py  mv_node.py  rm_node.py
jarvis_cd/hardware/: detect_networks.py  host_aliases.py  list_net.py
jarvis_cd/installer/: __init__.py  env_node.py  git_node.py  installer.py  modify_env_node.py  pip_node.py  (+1 more)
test/: Dockerfile  README.md  docker-compose.yml  run_local.sh  run_tests.sh
(+689 files in other folders)
