[project]
name = "jarvis_cd"
description = "Jarvis-CD: Unified platform for deploying applications and benchmarks"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
license = "BSD-3-Clause"
authors = [
  {name = "Luke Logan", email = "llogan@hawk.iit.edu"},
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "pyyaml",
  "pandas",
  "podman-compose",
  "pywin32>=311 ; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
  "pyright==1.1.411",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.21",
  "twine==6.2.0",
]

[project.urls]
Documentation = "https://github.com/grc-iit/jarvis-cd#readme"
issue-tracker = "https://github.com/grc-iit/jarvis-cd/issues"
source-code = "https://github.com/grc-iit/jarvis-cd"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools==80.9.0",
  "setuptools-scm==8.3.1",
]

[tool.setuptools]
packages = ["jarvis_cd", "jarvis_cd.artifacts", "jarvis_cd.core", "jarvis_cd.progress", "jarvis_cd.shell", "jarvis_cd.util", "builtin", "builtin.builtin"]
include-package-data = true

[tool.setuptools.package-data]
jarvis_cd = ["*.yaml", "*.yml"]
"*" = ["*.py", "*.yaml", "*.yml", "*.md", "*.txt", "*.conf", "*.xml", "*.param", "*.f", "*.input", "*.png", "*.sh"]
builtin = ["pipelines/**/*.yaml", "pipelines/**/*.yml"]

[project.scripts]
jarvis = "jarvis_cd.core.cli:main"

[project.entry-points."clio_relay.package_progress_adapters"]
lammps = "jarvis_cd.progress.lammps:adapter_from_package"
paraview = "jarvis_cd.progress.paraview:adapter_from_package"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
